# mitra-final-phase

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  PHASE_1_VALIDATION_REPORT.md  PHASE_2_VALIDATION_REPORT.md  PHASE_3_VALIDATION_REPORT.md  PHASE_4_VALIDATION_REPORT.md  PHASE_5_VALIDATION_REPORT.md  PHASE_6_VALIDATION_REPORT.md  PHASE_7_VALIDATION_REPORT.md  README.md  REEXECUTION_REPORT.md  REVIEW_PACKET.md  SUBMISSION_INDEX.md  VALIDATION_REPORT.md  docker-compose.ecosystem.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  vercel.json
api/: index.py
contracts/: context-runtime-policy.json  integration-contracts.json  intent-router-policy.json  operational-acceptance.json  ownership-boundary.json  product-attachment-runtime-policy.json  runtime-command-chain.json  runtime-interface-catalog.json  runtime-state-machine.json  source-scope-catalog.json
deploy/: local-ecosystem.env.example  otel-collector-config.yaml  production.env.example  render.public-modules.yaml
docs/: ADAPTER_GUIDE.md  ARCHITECTURE.md  ASHMIT_OWNER_RUNTIME.md  BHIV_PRODUCT_INTEGRATION.md  CENTRAL_DEPOSITORY_HANDOVER.md  DEPLOYMENT_PARITY.md  DEVELOPER_ONBOARDING.md  DOCUMENTATION_INDEX.md  ECOSYSTEM_CONFIGURATION_STATUS.md  EXECUTION_FLOW.md  FAILURE_MATRIX.md  FEEDBACK_ACCEPTANCE_UPGRADES.md  FINAL_RUNTIME_CONVERGENCE.md  HANDOVER.md  INDEPENDENT_HOSTING.md  INTEGRATION_GUIDE.md  MITRA_EXPECTATION_BASELINE.md  OPERATIONS_RUNBOOK.md  OWNERSHIP_BOUNDARY.md  PHASE_1_COMPANION_RUNTIME_DESIGN.md  PHASE_2_CONTEXT_RUNTIME.md  PHASE_3_INTENT_ROUTER.md  (+16 more)
(+218 files in other folders)
