[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mitra-companion-runtime"
version = "1.0.0"
description = "Interface-driven session, context, intent, and product attachment runtime for Mitra"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "jsonschema>=4.23.0,<5.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.scripts]
mitra-companion = "mitra_companion.cli:main"

[tool.setuptools.packages.find]
where = [
  "pratham/companion-runtime",
  "pratham/context-runtime",
  "pratham/intent-router",
  "pratham/session-runtime",
  "pratham/attachment-runtime",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["pratham/tests", "contracts/integration-tests"]
asyncio_mode = "auto"
